--- a/package.yaml
+++ b/package.yaml
@@ -22,8 +22,8 @@ description:         Please see the README on Github at <https://github.com/gith
 dependencies:
 - base >= 4.7 && < 5
 - haskeline >= 0.7
-  #- llvm-hs >= 5.1
-  #- llvm-hs-pure >= 5.1
+- llvm-hs >= 5
+- llvm-hs-pure >= 5
 - parsec >= 3.1
 - mtl >= 2.1.3
 - transformers >= 0.3 && < 0.6
