--- a/stack.yaml
+++ b/stack.yaml
@@ -41,7 +41,6 @@ packages:
 # (e.g., acme-missiles-0.3)
 extra-deps:
 - llvm-hs-5.1.3
-- parsec-3.1.11
 
 # Override default flag values for local packages and extra-deps
 # flags: {}
@@ -66,3 +65,7 @@ extra-deps:
 #
 # Allow a newer minor version of GHC than the snapshot specifies
 # compiler-check: newer-minor
+
+nix:
+  enable: true
+  packages: [clang_5, llvm_5]
