--- a/package.yaml
+++ b/package.yaml
@@ -27,6 +27,8 @@ dependencies:
 - parsec >= 3.1
 - mtl >= 2.1.3
 - transformers >= 0.3 && < 0.6
+- containers >= 0.5
+- bytestring >= 0.10
 
 library:
   source-dirs: src
