--- a/stack.yaml
+++ b/stack.yaml
@@ -66,6 +66,6 @@ extra-deps:
 # Allow a newer minor version of GHC than the snapshot specifies
 # compiler-check: newer-minor
 
-nix:
-  enable: true
-  packages: [clang_5, llvm_5]
+#nix:
+#  enable: true
+#  packages: [clang_5, llvm_5]
